[package]
name = "chtbtr"
version = "1.5.1"
authors = ["fzuellich <fzuellich@users.noreply.github.com>"]
edition = "2018"
default-run= "chtbtr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acteur = "0.10"
actix = "0.9.0"
actix-web = "^2.0.0"
actix-rt = "^1.1.0"
async-trait = "0.1"
clap = "2.33.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
log = { version = "0.4" }
env_logger = {version =  "0.7.1"}
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.103"
ron = "0.5.1"
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
